Feat: Task/invite update endpoints
